<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/boton_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:onClick="lanzarLogin"
        android:text="@string/login" />

    <Button
        android:id="@+id/boton_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:onClick="lanzarRanking"
        android:text="@string/ranking" />

    <Button
        android:id="@+id/boton_noticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:onClick="lanzarNoticias"
        android:text="@string/noticias" />

    <Button
        android:id="@+id/boton_acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:onClick="lanzarAcercaDe"
        android:text="@string/acerca_de" />

</LinearLayout>